updated code, exception handling, more endpoints