@@ -7,11 +7,11 @@ import com.ratr.film.mapper.EntityMapper;
 import com.ratr.model.film.Film;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @Slf4j
@@ -27,33 +27,25 @@ public class FilmService {
 
     public List<FilmDto> getAllFilms() {
         List<Film> allFilms = filmRepository.findAll();
-        return allFilms.stream().map(film -> FilmDto.builder()
-                .releaseYear(film.getReleaseYear())
-                .title(film.getTitle())
-                .directorName(film.getDirectorName())
-                .build()).collect(Collectors.toList());
+        return allFilms.stream().map(entityMapper::mapEntityToDto).toList();
     }
 
     public List<FilmDto> getFilmByTitle(String filmTitle) {
         List<Film> films = filmRepository.findFilmsByTitle(filmTitle);
-        log.info(films.toString());
         return films.stream().map(entityMapper::mapEntityToDto).toList();
     }
 
     public FilmDto storeFilm(FilmDto filmDto) throws FilmExistsException {
-        String checkExistence = filmRepository.getFilmIdByTitleDirectorAndReleaseYear(
-                filmDto.getTitle(),
-                filmDto.getDirectorName(),
-                filmDto.getReleaseYear());
-
-        log.info("existence is " + checkExistence);
-
-        if (!Objects.equals(checkExistence, null)) {
-            throw new FilmExistsException("This film already exists");
+        try {
+            Film savedFilm = filmRepository.saveAndFlush(entityMapper.mapDtoToEntity(filmDto));
+            log.info("returned " + savedFilm);
+            return entityMapper.mapEntityToDto(savedFilm);
+        } catch (DataIntegrityViolationException e) {
+            throw new FilmExistsException();
         }
+    }
 
-        Film savedFilm = filmRepository.save(entityMapper.mapDtoToEntity(filmDto));
-
-        return entityMapper.mapEntityToDto(savedFilm);
+    public void removeFilmById(String filmId) {
+        filmRepository.deleteById(UUID.fromString(filmId));
     }
 }
